improve Shiki setup, avoid layout shifts, other tweaks and fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -265,6 +265,7 @@ select {
     }
 
     &.shiki {
+      border-radius: 6px;
       padding: 12px 16px;
       background-color: var(--code-block-background) !important;
     }
